2012-01-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Check for presence of lusb_usb.h as an alternative
	to usb.h; libusb-win32 switched to this name in version 1.2.5.0.
	* avrftdi.c: Decide whether to include <usb.h>, or <lusb0_usb.h>.
	* ser_avrdoper.c: (Dito.)
	* usbasp.c: (Dito.)
	* usb_libusb.c: (Dito.)
	* usbtiny.c: (Dito.)

2012-01-19  Rene Liebscher <R.Liebscher@gmx.de>

	* avr.c: Unsigned variable was used for return code of paged_write/load
	functions. So a negative return code led never to a fallback to byte
	functions.

2012-01-17  Rene Liebscher <R.Liebscher@gmx.de>

	bug #34302: Feature request : device configuration with parent classes
	* config_gram.y: if memory section is overwritten old entry is removed
	
	(not in original patch)
	* config_gram.y: if programmer or part is defined twice, a warning is
	output and the first instance is removed
	
	General cleanup and free functions, so valgrind does not report any lost
	blocks at program end.
	* avrpart.[hc]: added avr_free_(opcode|mem|part) functions
	* pgm.[hc]: added pgm_free function
	* update.[hc]: added free_update functions
	* config.[hc]: added cleanup_config function, use yylex_destroy to reset
	the lexer after usage. (So it can be reused.)
	* main.c: add cleanup_main function which is called by atexit() (This 
	frees all lists so that at program exit only really lost memory is 
	reported by valgrind.)
	* usbasp.c: added libusb_free_device_list() and libusb_exit() calls to
	avoid lost memory
	* buspirate.c: moved memory allocation from initpgm to setup and added 
	free in teardown
	* configure.ac: add definition of HAVE_YYLEX_DESTROY if $LEX is flex.
	* Makefile.am: added . in front of SUBDIRS to build avrdude before trying
	to use it for creating the part list for the docs.

2012-01-17  Rene Liebscher <R.Liebscher@gmx.de>

	* usbasp.c: USB vid/pid/vendor/product from config file are used, for
	id "usbasp" nibobee and old usbasp are tried as they were currently